<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="75dp"
                android:text="@string/bienvenido"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvEmailProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="75dp"
                android:text="@string/usuario"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etNameProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etSurnameProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/apellido"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etClassProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/curso"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etSubjectProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/materia"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etSchoolProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/escuela"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btnEditProfile"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:text="@string/editar_perfil" />

            <Button
                android:id="@+id/btnSaveProfile"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:enabled="false"
                android:text="@string/guardar_cambios" />

            <Button
                android:id="@+id/btnPwdChange_Profile"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:text="@string/cambiar_contraseña" />

            <Button
                android:id="@+id/btnDeleteProfile"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:backgroundTint="#F44336"
                android:text="@string/eliminar_cuenta" />

            <Button
                android:id="@+id/btnLogOutProfile"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:layout_marginBottom="45dp"
                android:text="@string/cerrar_sesion" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>