<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PerfilFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBienvenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="75dp"
                android:text="@string/bienvenido"
                android:textAlignment="center"
                android:textColor="@color/primario"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmailUsr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="75dp"
                android:text="@string/usuario"
                android:textAlignment="center"
                android:textColor="@color/primario"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombrePerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etApellidoPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/apellido"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btEditarPerfil"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:text="@string/editar_perfil" />

            <Button
                android:id="@+id/btGuardarCambios"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:enabled="false"
                android:text="@string/guardar_cambios" />

            <Button
                android:id="@+id/btCambiarPwd"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:text="@string/cambiar_contraseña" />

            <Button
                android:id="@+id/btEliminarCuenta"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:backgroundTint="#F44336"
                android:text="@string/eliminar_cuenta" />

            <Button
                android:id="@+id/btCerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:layout_marginBottom="45dp"
                android:text="@string/cerrar_sesion" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>